ft_atoi y corrección del memcpy

--- a/cursus/libft/Makefile
+++ b/cursus/libft/Makefile
@@ -21,7 +21,9 @@ MY_SOURCES = ft_strlen.c\
 		ft_memchr.c\
 		ft_memcmp.c\
 		ft_strnstr.c\
-		ft_strncmp.c
+		ft_strncmp.c\
+		ft_atoi.c\
+		ft_calloc.c
 
 MY_OBJECTS = $(MY_SOURCES:.c=.o)
 
