solo falta split

--- a/cursus/libft/Makefile
+++ b/cursus/libft/Makefile
@@ -31,7 +31,10 @@ MY_SOURCES = ft_strlen.c\
 		ft_putchar_fd.c\
 		ft_putstr_fd.c\
 		ft_putendl_fd.c\
-		ft_putnbr_fd.c
+		ft_putnbr_fd.c\
+		ft_strmapi.c\
+		ft_itoa.c
+
 
 MY_OBJECTS = $(MY_SOURCES:.c=.o)
 
@@ -55,5 +58,5 @@ fclean: clean
 	
 re:	fclean all
 
->>>>>>> origin
+
 .PHONY: all clean fclean re
